[package]
name = "vrs-nucleus-executor"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
codec = { workspace = true }
serde = { workspace = true, features = ["derive"] }
wasmtime = { workspace = true }
vrs-primitives = { path = "../../primitives" }
vrs-core-sdk = { workspace = true }
rocksdb = "0.21.0"
anyhow = "1"
log = "0.4"
env_logger = "0.10"
futures = { features = ["thread-pool"], version = "0.3.30" }
tokio = { version = "1", features = ["full"] }
hex = { version = "0.4" }
thiserror = "1"
chrono = { version = "0.4" }
hyper = { version = "1.3", features = ["full"] }
unicase = "2.6"
hyper-tls = "0.6.0"
hyper-util = { version = "0.1", features = ["full"] }
bytes = "1"
http-body-util = "0.1.0"
tokio-native-tls = "0.3"
pin-project-lite = "0.2.4"
xmt = { package = "sparse-merkle-tree", version = "0.6.1" }
blake2 = "0.10.6"
vrs-tss = { path = "../../tss" }
sha2 = "0.10"
serde_json = "1"

[dev-dependencies]
temp-dir = "0.1.13"
