[package]
name = "vrs-nucleus-p2p"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
futures = { features = ["thread-pool"], version = "0.3.30" }
tokio = { version = "1", features = ["full"] }
async-channel = "1.8.0"
codec = { workspace = true }
log = "0.4"

vrs-primitives = { path = "../../primitives" }

sc-network = { version = "0.42.0" }
sp-runtime = { workspace = true }
sp-core = { workspace = true }
sp-api = { workspace = true }
sp-keystore = { workspace = true }
sp-blockchain = { workspace = true }
sc-client-api = { version = "35.0.0" }
scale-info.workspace = true
# parity-scale-codec.workspace = true
