[package]
name = "vrs-core-sdk"
version.workspace = true
authors.workspace = true
edition.workspace = true

[features]
default = ["std"]
nostd = []
std = ["vrs-primitives/std"]

[dependencies]
tokio = { version = "1", features = [
    "sync",
    "macros",
    "rt",
    "io-util",
    "time",
] }
vrs-primitives = { path = "../../primitives", default-features = false, features = [
    # "std",
] }
vrs-core-macros = { path = "../core-macros" }
anyhow = { version = "1", default-features = false }
codec = { workspace = true, default-features = false }
[target.'cfg(feature = "nostd")'.dependencies]

vrs-primitives = { path = "../../primitives", default-features = false, features = [
    # "std",
] }
