[package]
name = "nucleus-cage"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
vrs-core-sdk = { path = "../core-sdk" }
codec = { workspace = true }
wasmtime = { workspace = true }
rocksdb = "0.21.0"
anyhow = "1"
log = "0.4"
env_logger = "0.10"
