[package]
name = "vrs-nucleus-examples"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
sp-runtime = { features = [
    # "std",
    "serde",
], version = "39.0.0", default-features = false }
vrs-core-sdk = { path = "../core-sdk" }
codec = { workspace = true }
wasm-bindgen = "0.2.84"
