[package]
name = "vrs-nucleus-examples"
version = "0.0.1"
authors = ["Verisense Team"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# sp-runtime = { features = [
#     # "std",
#     "serde",
# ], version = "39.0.0", default-features = false }
vrs-core-sdk = { path = "../core-sdk", default-features = false, features = [
    "std", # use for expand
] }
codec = { features = [
    "derive",
], package = "parity-scale-codec", version = "3.6.12", default-features = false }
wasm-bindgen = "0.2.84"
