[package]
name = "pallet-a2a"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
codec = { features = ["derive"], workspace = true, default-features = false }
scale-info = { features = ["derive"], workspace = true, default-features = false }

# frame deps
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
vrs-primitives = { path = "../../primitives", default-features = false }
vrs-support = { path = "../../support", default-features = false }
a2a-rs = { path = "../../crates/a2a", default-features = false }
log = { workspace = true, default-features = false}
url = { version = "2.5.3", default-features = false }
domain-verifier = { path = "../../crates/domain-verifier", default-features = false}
sp-core = {workspace = true, default-features = false}
hex = {version = "0.4.3", default-features = false, features = ["alloc"]}
[dev-dependencies]
sp-io = { workspace = true, default-features = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "scale-info/std",
    "sp-runtime/std",
    "vrs-primitives/std",
    "vrs-support/std",
    "a2a-rs/std",
    "hex/std",
    "sp-core/std",
    "domain-verifier/std"
]
