[package]
name = "pallet-nucleus"
description = "FRAME pallet nucleus for managing AVS."
version.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], workspace = true }
scale-info = { features = ["derive"], workspace = true }

# frame deps
frame-support = { workspace = true }
frame-system = { workspace = true }

sp-runtime = { workspace = true }
vrs-primitives = { path = "../../primitives", package = "verisense-primitives", default-features = false }

[dev-dependencies]
sp-core = { workspace = true, default-features = true }
sp-io = { workspace = true, default-features = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
]
