[package]
name = "pallet-nucleus"
description = "FRAME pallet nucleus for managing AVS."
version.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], workspace = true, default-features = false }
scale-info = { features = ["derive"], workspace = true, default-features = false }

# frame deps
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }

sp-runtime = { workspace = true, default-features = false }
vrs-primitives = { path = "../../primitives", package = "verisense-primitives", default-features = false }

[dev-dependencies]
sp-core = { workspace = true, default-features = true }
sp-io = { workspace = true, default-features = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
]
