[package]
name = "pallet-nucleus"
description = "FRAME pallet nucleus for managing AVS."
version.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], workspace = true, default-features = false }
scale-info = { features = [
	"derive",
], workspace = true, default-features = false }

# frame deps
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
vrs-primitives = { path = "../../primitives", default-features = false }
vrs-support = { path = "../../support", default-features = false }
pallet-assets = { workspace = true, default-features = false }

[dev-dependencies]
sp-io = { workspace = true, default-features = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"vrs-primitives/std",
	"vrs-support/std",
	"pallet-assets/std",
]
