[package]
name = "pallet-restaking"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]


[dependencies]
base64 = { version = "0.13", default-features = false, features = ["alloc"] }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.1.1", default-features = false, features = [
    "derive",
] }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
log = { version = "0.4.17", default-features = false }
serde = { version = "1.0.136", features = ["derive"], default-features = false }
serde_bytes = { version = "0.11", default-features = false, features = [
    "alloc",
] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
sp-application-crypto = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
verisense-support = { path = "../../support", default-features = false }
vrs-primitives = { path = "../../primitives", default-features = false }

[features]
default = ["std"]
std = [
    "base64/std",
    "codec/std",
    "hex/std",
    "log/std",
    "scale-info/std",
    "serde/std",
    "serde_bytes/std",
    "serde_json/std",
    "frame-support/std",
    "frame-system/std",
    "sp-application-crypto/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
    "verisense-support/std",
    "sp-std/std",
]
