[package]
name = "pallet-restaking"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]


[dependencies]
base64 = { version = "0.13", default-features = false, features = ["alloc"] }
codec = { workspace = true, default-features = false, features = [
    "derive",
] }
scale-info = { workspace = true, default-features = false, features = [
    "derive",
] }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
log = { workspace = true, default-features = false }
serde = { workspace = true, features = ["derive"], default-features = false }
serde_bytes = { version = "0.11", default-features = false, features = [
    "alloc",
] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
sp-application-crypto = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false, features = ["serde"] }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
vrs-support = { path = "../../support", default-features = false }
vrs-primitives = { path = "../../primitives", default-features = false }
sha3 = {version = "0.10.8", default-features = false}
ethabi = {version = "18.0.0", default-features = false}
const-hex = {version = "1.14.0", default-features = false, features = ["alloc"]}
[features]
default = ["std"]
std = [
    "base64/std",
    "codec/std",
    "hex/std",
    "log/std",
    "scale-info/std",
    "const-hex/std",
    "serde/std",
    "serde_bytes/std",
    "serde_json/std",
    "frame-support/std",
    "frame-system/std",
    "sp-application-crypto/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
    "vrs-support/std",
    "sp-std/std",
    "sha3/std",
    "vrs-primitives/std",
    "ethabi/std",
]
