[package]
name = "pallet-swap"
description = "a pallet for swap"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive"] }
frame-benchmarking = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-assets = { workspace = true }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
log = { workspace = true, default-features = false }
vrs-support = { path = "../../support", default-features = false }


[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "sp-runtime/std",
    "sp-std/std",
    "frame-benchmarking/std",
    "frame-support/std",
    "frame-system/std",
    "vrs-support/std",
    "pallet-assets/std"
]