[package]
name = "pallet-swap"
description = "a pallet for swap"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true, default-features = false, features = ["derive"] }
frame-benchmarking = { workspace = true, default-features = false }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
pallet-assets = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
log = { workspace = true, default-features = false }
vrs-support = { path = "../../support", default-features = false }
vrs-primitives = {path = "../../primitives", default-features = false}

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "sp-runtime/std",
    "sp-std/std",
    "frame-benchmarking/std",
    "frame-support/std",
    "frame-system/std",
    "vrs-support/std",
    "pallet-assets/std",
    "vrs-primitives/std"
]
