[package]
name = "pallet-validators"
description = "FRAME pallet for managing validators"
version.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace =true, default-features = false, features = ["derive"] }
vrs-support = { path = "../../support", default-features =  false }
log = { workspace = true, default-features = false }
pallet-session = { workspace = true,  default-features = false, features = ["historical"]}
sp-staking = { workspace = true , default-features = false }
serde = { workspace = true, default-features = false, features = ["derive"] }
pallet-authorship = { workspace = true, default-features = false }
scale-info = { features = ["derive"], workspace = true, default-features = false }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "vrs-support/std",
    "frame-system/std",
    "scale-info/std",
    "pallet-session/std",
    "sp-core/std",
    "log/std",
    "sp-staking/std",
    "serde/std",
    "pallet-authorship/std",
    "sp-runtime/std",
]

